--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
+    "@types/styled-theming": "^2.2.5",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.0",
+    "styled-theming": "^2.2.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
