implement way to get default state through services function

--- a/src/server/routes/html/homeConfig.json
+++ b/src/server/routes/html/homeConfig.json
@@ -3,7 +3,14 @@
   "url": "/",
   "methods": [
     {
-      "method": "GET"
+      "method": "GET",
+      "services": [
+        {
+          "action": "GET",
+          "service": "Base",
+          "stateName": "base"
+        }
+      ]
     }
   ]
 }
