--- a/package.json
+++ b/package.json
@@ -173,7 +173,9 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "@babel/preset-env",
+      "@babel/preset-react",
+      "babel/preset-typescript"
     ]
   }
 }
