default state being passed down through app after fake db read

--- a/package.json
+++ b/package.json
@@ -173,9 +173,10 @@
   },
   "babel": {
     "presets": [
+      "react-app",
       "@babel/preset-env",
       "@babel/preset-react",
-      "babel/preset-typescript"
+      "@babel/preset-typescript"
     ]
   }
 }
