nav functionality, Menu elements, react app will now render after initial server render, bashrc

--- a/src/site-config/site-config.json
+++ b/src/site-config/site-config.json
@@ -1,6 +1,14 @@
 {
-  "style": {
-    "navHeight": "7vh",
-    "footerHeight": "7vh"
+  "nav": {
+    "links": [
+      {
+        "url": "/",
+        "text": "Home"
+      }
+    ],
+    "style": {
+      "navHeight": "7vh",
+      "footerHeight": "7vh"
+    }
   }
 }
