fix Router to use BrowserRouter and deleted history object, gitignored pages to begin branching code out

--- a/src/site-config/site-config.json
+++ b/src/site-config/site-config.json
@@ -4,6 +4,10 @@
       {
         "url": "/",
         "text": "Home"
+      },
+      {
+        "url": "/about",
+        "text": "About"
       }
     ],
     "style": {
