--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,6 @@
     "@babel/plugin-proposal-export-namespace-from",
     "@babel/plugin-proposal-numeric-separator",
     "@babel/plugin-proposal-throw-expressions",
-    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
