--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "slate": "^0.59.0",
+    "slate-history": "^0.59.0",
+    "slate-react": "^0.59.0",
     "style-loader": "1.3.0",
     "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
@@ -126,6 +128,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/express": "^4.17.9",
     "@types/slate": "^0.47.8",
+    "@types/slate-react": "^0.22.9",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^8.0.11",
