--- a/tsconfig.overrides.json
+++ b/tsconfig.overrides.json
@@ -15,6 +15,8 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "react-jsx",
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitAny": false,
+    "downlevelIteration": true
   }
 }
