fix prod => start break

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "start:build-server": "NODE_ENV=production webpack --config webpack.config.js --mode=production ",
     "start:start": "node ./bundle.server.js",
-    "start": "npm-run-all --parallel prod:*"
+    "start": "npm-run-all --parallel start:*"
   },
   "eslintConfig": {
     "extends": [
