--- a/src/site-config/site-config.json
+++ b/src/site-config/site-config.json
@@ -3,16 +3,20 @@
     "links": [
       {
         "url": "/",
-        "text": "Home"
+        "text": "Services"
       },
       {
         "url": "/about",
         "text": "About"
+      },
+      {
+        "url": "/contact",
+        "text": "Contact"
       }
     ],
     "style": {
-      "navHeight": "7vh",
-      "footerHeight": "7vh"
+      "navHeight": "4em",
+      "footerHeight": "4em"
     }
   }
 }
