--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -42,6 +43,7 @@
     "express": "^4.17.1",
     "faunadb": "^4.0.0",
     "file-loader": "6.1.1",
+    "formik": "^2.2.9",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "i": "^0.3.6",
@@ -52,8 +54,11 @@
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
     "mobx-react": "^7.2.0",
+    "mongoose": "^5.13.2",
     "npm": "^7.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
