--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.1.0",
     "express": "^4.17.1",
-    "faunadb": "^4.0.0",
     "file-loader": "6.1.1",
     "formik": "^2.2.9",
     "fs-extra": "^9.0.1",
@@ -52,13 +51,13 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.11.3",
     "mobx-react": "^7.2.0",
+    "mongodb": "^3.6.8",
     "mongoose": "^5.13.2",
     "npm": "^7.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
