--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@svgr/webpack": "5.4.0",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -53,6 +53,7 @@
     "jest-watch-typeahead": "0.6.1",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.11.3",
+    "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "mongodb": "^3.6.8",
     "mongoose": "^5.13.2",
