work on Composed Text component for controlling content on the site

--- a/src/server/routes/html/homeConfig.json
+++ b/src/server/routes/html/homeConfig.json
@@ -8,8 +8,9 @@
       "services": [
         {
           "action": "GET",
-          "service": "Base",
-          "stateName": "base"
+          "service": "Content",
+          "stateName": "content",
+          "accessorName": "home"
         }
       ]
     }
