--- a/src/site-config/site-config.json
+++ b/src/site-config/site-config.json
@@ -25,5 +25,11 @@
       }
     }
   },
-  "server": {}
+  "server": {
+    "database": {
+      "connection": {
+        "development": "mongodb://localhost:27017/Lily's"
+      }
+    }
+  }
 }
