--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-theming": "^2.2.5",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "axios": "^0.21.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -58,7 +59,6 @@
     "mongodb": "^3.6.8",
     "mongoose": "^5.13.2",
     "npm": "^7.19.1",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
@@ -141,7 +141,7 @@
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^8.0.11",
-    "webpack": "^5.8.0",
+    "webpack": "4.44.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^2.5.2"
