--- a/package.json
+++ b/package.json
@@ -95,10 +95,10 @@
   },
   "scripts": {
     "dev:build-server": "NODE_ENV=development webpack -w --config webpack.config.js --mode=development ",
-    "dev:start": "nodemon ./dist/bundle.server.js",
+    "dev:start": "nodemon --experimental-modules ./dist/bundle.server.js",
     "dev": "npm-run-all --parallel dev:*",
     "start:build-server": "NODE_ENV=production webpack --config webpack.config.js --mode=production ",
-    "start:start": "node ./dist/bundle.server.js",
+    "start:start": "node --experimental-modules ./dist/bundle.server.js",
     "start": "npm-run-all --parallel start:*"
   },
   "eslintConfig": {
