--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -94,12 +94,12 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "dev:build-server": "NODE_ENV=development webpack -w --config webpack.config.js --mode=development ",
+    "dev:build-server": "NODE_ENV=development webpack -w --config webpack.config.cjs --mode=development ",
     "dev:start": "nodemon ./dist/bundle.server.js",
-    "dev": "npm-run-all --parallel dev:*",
-    "start:build-server": "NODE_ENV=production webpack --config webpack.config.js --mode=production ",
+    "dev": "npm-run-all  dev:*",
+    "start:build-server": "NODE_ENV=production webpack --config webpack.config.cjs --mode=production ",
     "start:start": "node ./dist/bundle.server.js",
-    "start": "npm-run-all --parallel start:*"
+    "start": "npm-run-all  start:*"
   },
   "eslintConfig": {
     "extends": [
@@ -122,6 +122,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
     "@babel/plugin-proposal-function-sent": "^7.12.1",
     "@babel/plugin-proposal-json-strings": "^7.12.1",
@@ -131,7 +132,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-arrow-functions": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
