--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,13 @@
+
+
 {
-  "presets": [
-    "@babel/preset-react",
-    "@babel/preset-env",
-    "@babel/preset-typescript",
-    "react-app"
-  ],
+  "presets": ["@babel/preset-react", "@babel/preset-env", "@babel/preset-typescript",],
   "plugins": [
     "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-syntax-import-meta",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-json-strings",
-    
     [
       "@babel/plugin-proposal-decorators",
       {
@@ -23,5 +19,7 @@
     "@babel/plugin-proposal-numeric-separator",
     "@babel/plugin-proposal-throw-expressions",
     "@babel/plugin-proposal-optional-chaining"
-  ]
+
+  ],
+
 }
