--- a/package.json
+++ b/package.json
@@ -3,102 +3,94 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@svgr/webpack": "^5.4.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.2",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.9",
+    "@types/styled-components": "^5.1.14",
     "@types/styled-theming": "^2.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^0.21.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "8.1.0",
+    "babel-jest": "^27.2.0",
+    "babel-loader": "8.2.2",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "bfj": "^7.0.2",
-    "camelcase": "^6.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "4.3.0",
-    "dotenv": "8.2.0",
+    "camelcase": "^6.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.4.0",
+    "css-loader": "6.2.0",
+    "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.1.0",
+    
     "express": "^4.17.1",
-    "file-loader": "6.1.1",
+    "file-loader": "6.2.0",
     "formik": "^2.2.9",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.0",
+    "fs-extra": "^10.0.0",
+    "html-webpack-plugin": "5.3.2",
     "i": "^0.3.6",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
+    "jest": "27.2.0",
+    "jest-circus": "27.2.0",
+    "jest-resolve": "27.2.0",
+    "jest-watch-typeahead": "0.6.4",
     "jsonwebtoken": "^8.5.1",
-    "mini-css-extract-plugin": "0.11.3",
-    "mobx": "^6.3.2",
+    "mini-css-extract-plugin": "2.3.0",
+    "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
-    "mongodb": "^3.6.8",
-    "mongoose": "^5.13.2",
-    "npm": "^7.19.1",
-    "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.6",
+    "npm": "^7.23.0",
+    "pnp-webpack-plugin": "1.7.0",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "6.1.1",
+    "postcss-normalize": "10.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
-    "prompts": "2.4.0",
-    "react": "^17.0.1",
+    "postcss-safe-parser": "6.0.0",
+    "prompts": "2.4.1",
+    "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.1",
-    "react-dom": "^17.0.1",
-    "react-draggable": "^4.4.3",
-    "react-refresh": "^0.8.3",
-    "react-router-dom": "^5.2.0",
-    "resolve": "1.18.1",
-    "resolve-url-loader": "^3.1.2",
-    "sass-loader": "8.0.2",
-    "semver": "7.3.2",
-    "slate": "^0.59.0",
-    "slate-history": "^0.59.0",
-    "slate-react": "^0.59.0",
-    "style-loader": "1.3.0",
-    "styled-components": "^5.2.1",
+    "react-dev-utils": "^11.0.4",
+    "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-refresh": "^0.10.0",
+    "react-router-dom": "^5.3.0",
+    "resolve": "1.20.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "12.1.0",
+    "semver": "7.3.5",
+    "slate": "^0.66.1",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.66.1",
+    "style-loader": "3.2.1",
+    "styled-components": "^5.3.1",
     "styled-theming": "^2.2.0",
-    "terser-webpack-plugin": "4.2.3",
+    "terser-webpack-plugin": "5.2.4",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.1.2",
+    "typescript": "^4.4.3",
     "url-loader": "4.1.1",
-    "web-vitals": "^1.0.1",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "web-vitals": "^2.1.0",
+    "webpack": "5.53.0",
+    "webpack-dev-server": "4.2.1",
+    "webpack-manifest-plugin": "4.0.2",
+    "workbox-webpack-plugin": "6.3.0"
   },
   "scripts": {
     "dev:build-server": "NODE_ENV=development webpack -w --config webpack.config.cjs --mode=development ",
-    "dev:start": "nodemon ./dist/bundle.server.js",
+    "dev:start": "nodemon ./dist/bundle.server.cjs",
     "dev": "npm-run-all  dev:*",
     "start:build-server": "NODE_ENV=production webpack --config webpack.config.cjs --mode=production ",
-    "start:start": "node ./dist/bundle.server.js",
+    "start:start": "node ./dist/bundle.server.cjs",
     "start": "npm-run-all  start:*"
   },
   "eslintConfig": {
@@ -120,31 +112,31 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-function-sent": "^7.12.1",
-    "@babel/plugin-proposal-json-strings": "^7.12.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.12.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
+    "@babel/plugin-proposal-function-sent": "^7.14.5",
+    "@babel/plugin-proposal-json-strings": "^7.14.5",
+    "@babel/plugin-proposal-numeric-separator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/plugin-transform-arrow-functions": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/express": "^4.17.9",
-    "@types/slate": "^0.47.8",
-    "@types/slate-react": "^0.22.9",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/express": "^4.17.13",
+    "@types/slate": "^0.47.9",
+    "@types/slate-react": "^0.50.0",
     "html-webpack-plugin": "^4.5.0",
     "npm-run-all": "^4.1.5",
-    "ts-loader": "^8.0.11",
-    "webpack": "4.44.2",
-    "webpack-cli": "^4.2.0",
+    "ts-loader": "^9.2.5",
+    "webpack": "5.53.0",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^2.5.2"
+    "webpack-node-externals": "^3.0.0"
   }
 }
