--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   "scripts": {
     "dev:build-server": "NODE_ENV=development webpack -w --config webpack.config.cjs --mode=development ",
     "dev:start": "nodemon ./dist/bundle.server.cjs",
-    "dev": "npm-run-all  dev:*",
+    "dev": "npm-run-all --parallel dev:*",
     "start:build-server": "NODE_ENV=production webpack --config webpack.config.cjs --mode=production ",
     "start:start": "node ./dist/bundle.server.cjs",
     "start": "npm-run-all  start:*"
