--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@google-cloud/storage": "^5.19.1",
+    "@google-cloud/vision": "^2.4.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -28,6 +30,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.2.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
+    
     "css-loader": "6.2.0",
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
@@ -38,10 +41,12 @@
     "html-webpack-plugin": "5.3.2",
     "i": "^0.3.6",
     "identity-obj-proxy": "3.0.0",
+    "install": "^0.13.0",
     "jest": "27.2.0",
     "jest-circus": "27.2.0",
     "jest-resolve": "27.2.0",
     "jest-watch-typeahead": "0.6.4",
+    "json-as-xlsx": "^2.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "2.3.0",
@@ -49,7 +54,9 @@
     "mobx-react": "^7.2.0",
     "mongodb": "^4.1.2",
     "mongoose": "^6.0.6",
-    "npm": "^7.23.0",
+    "multer": "^1.4.4",
+    "multer-google-storage": "^1.3.0",
+    "npm": "^7.24.2",
     "pnp-webpack-plugin": "1.7.0",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "6.1.1",
